# gapix

./: .gitignore  Cargo.toml  NOTES.md  README.md  bacon.toml  install.sh  run.sh
gapix/: Cargo.toml
gapix/src/: args.rs  join.rs  main.rs
gapix_core/: Cargo.toml
gapix_core/src/: dates.rs  error.rs  excel.rs  formatting.rs  geocoding.rs  gpx_writer.rs  lib.rs  model.rs  model_impls.rs  stage.rs
gapix_core/src/read/: attributes.rs  bounds.rs  copyright.rs  declaration.rs  email.rs  extensions.rs  fit.rs  gpx.rs  link.rs  metadata.rs  mod.rs  person.rs  route.rs  track.rs  track_segment.rs  trackpoint_extensions.rs  waypoint.rs  xml_reader_extensions.rs
gapix_database/: Cargo.toml
gapix_database/src/: lib.rs
gapix_database/src/entity/: mod.rs
gapix_database/src/migration/: m20241211_02.rs  mod.rs
gapixweb/: Cargo.toml  rinja.toml
gapixweb/assets/: gapix.css
gapixweb/src/: args.rs  asset.rs  database.rs  error.rs  index.rs  main.rs  tags.rs
gapixweb/src/api/: README.md  file.rs  mod.rs
gapixweb/src/api/handlers/: mod.rs
gapixweb/src/api/models/: file.rs
gapixweb/src/components/: README.md  mod.rs  page.rs  tabs.rs
gapixweb/src/components/templates/: page.html  tabs.html
gapixweb/src/database/: conn.rs  file.rs  mod.rs
gapixweb/src/database/entity/: mod.rs
gapixweb/src/database/migration/: m20241211_02.rs  mod.rs
gapixweb/src/views/: README.md  mod.rs  page.rs  ride.rs  segment.rs
gapixweb/src/views/templates/: page.html
geocoding/: Cargo.toml  build.rs
geocoding/src/: lib.rs  types.rs
geocoding_places/: Cargo.toml
geocoding_places/src/: main.rs
geonames/: Cargo.toml
geonames/src/: main.rs  model.rs
