[workspace]
resolver = "2"
members = ["gapix_core", "gapix", "geocoding"]

[workspace.dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
clap = { version = "4.5.11", features = ["derive", "cargo"] }
env_logger = "0.11.5"
log = "0.4.22"
logging_timer = "1.1.1"
thiserror = "1.0.64"

[profile.release]
lto = true
codegen-units = 1
