[workspace]
resolver = "2"
members = ["gapix_core", "gapix", "gapixweb"]

[workspace.dependencies]
anyhow = { version = "1.0.93", features = ["backtrace"] }
clap = { version = "4.5.21", features = ["derive", "cargo"] }
env_logger = "0.11.5"
log = "0.4.22"
logging_timer = "1.1.1"
thiserror = "2.0.4"
rayon = "1.10.0"

[profile.release]
lto = true
codegen-units = 1
