[workspace]
resolver = "2"
members = ["gapix_core", "gapix", "gapix_database", "gapixweb"]

[workspace.dependencies]
anyhow = { version = "1.0.93", features = ["backtrace"] }
clap = { version = "4.5.21", features = ["derive", "cargo"] }
directories = "5.0.1"
env_logger = "0.11.5"
log = "0.4.22"
logging_timer = "1.1.1"
rayon = "1.10.0"
thiserror = "2.0.4"
tokio = { version = "1.42", features = ["full"] }
tracing = "0.1"

[profile.release]
lto = true
codegen-units = 1
