[package]
name = "gapix"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
gapix_core = { path = "../gapix_core" }
log = { workspace = true }
logging_timer = { workspace = true }
serde = { version = "1.0.204", features = ["derive"] }
wild = "2.2.1"
