[package]
name = "gapix"
version = "3.0.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
directories = "5.0.1"
env_logger = { workspace = true }
gapix_core = { path = "../gapix_core" }
log = { workspace = true }
logging_timer = { workspace = true }
rayon = { workspace = true }
wild = "2.2.1"
