[package]
name = "gapixweb"
version = "0.1.0"
edition = "2021"
default-run = "gapixweb"

[dependencies]
anyhow = { workspace = true }
axum = { version = "0.7", features = ["multipart"] }
clap = { workspace = true }
directories = { workspace = true } # Used to figure out where to put the database
gapix_core = { path = "../gapix_core" }
gapix_database = { path = "../gapix_database" }
mime_guess = { version = "2.0" } # Used to serve the embedded assets with the correct mime type
opener = "0.7.2" # Used to automatically open the browser window
rinja_axum = { version = "0.3.5" }
rust-embed = { version = "8.5.0", features = ["include-exclude"] } # Used to embed the 'assets' folder
sha2 = "0.10.8"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
